# llm_benchmark_dashboard

./: .env.example  .gitignore  Dockerfile  README.md  demo.py  docker-compose.yml  pyproject.toml  quick_demo.py  railway.json  requirements.txt  requirements_minimal.txt  run_benchmark.py  show_features.py  start_app.sh  streamlit_cloud_deploy.md  vercel.json
.streamlit/: config.toml
api/: health.py
docs/: SCREENSHOT_GUIDE.md
src/: __init__.py
src/core/: __init__.py  cache.py  logger.py  metrics.py  runner.py
src/datasets/: __init__.py  base.py  code_generation_data.py  factual_accuracy_data.py  instruction_following_data.py  loader.py  reasoning_logic_data.py  safety_bias_data.py
src/evaluators/: __init__.py  base.py  code_generation.py  factual_accuracy.py  instruction_following.py  reasoning_logic.py  safety_bias.py
src/models/: __init__.py  anthropic_provider.py  base.py  factory.py  ollama_provider.py  openai_provider.py
src/reporters/: __init__.py  base.py  csv_reporter.py  html_reporter.py  json_reporter.py
tests/: __init__.py  test_evaluators.py  test_models.py
web_ui/: app.py
web_ui/static/: index.html
